After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708994 - Window width can't be reduced enough
Window width can't be reduced enough
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
3.10.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
: 712285 (view as bug list)
Depends on:
Blocks: 711668
 
 
Reported: 2013-09-28 15:12 UTC by Frederic Peters
Modified: 2013-11-14 11:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-location-entry: Set default size and allow to reduced the entry (1.81 KB, patch)
2013-10-30 00:32 UTC, Yosef Or Boczko
none Details | Review
ephy-location-entry: Set default size and allow to reduced the entry (1.83 KB, patch)
2013-11-08 13:16 UTC, Yosef Or Boczko
committed Details | Review

Description Frederic Peters 2013-09-28 15:12:02 UTC
I guess this is caused by the new fixed width location bar; I can't resize my epiphany window size below 775 pixels, and that means the shell "set window to fill half the screen" feature doesn't work for epiphany.
Comment 1 Eddy Castillo 2013-10-08 22:41:12 UTC
Same here, and meta + left/right keys don't work either.
Comment 2 medeoTL 2013-10-26 18:12:40 UTC
Same here, pls solve it
Comment 3 Yosef Or Boczko 2013-10-30 00:32:34 UTC
Created attachment 258504 [details] [review]
ephy-location-entry: Set default size and allow to reduced the entry

I see just one problem: the patch set the default size
of the entry to 530px, not the size of the entry + the
reload button.
I don't want to create a custom box just for this,
but if we want it possible to add something same
to EphyAddressBar (a GtkBox is override get_preferred_width).
Comment 4 Claudio Saavedra 2013-11-08 12:56:57 UTC
Well, the 530px size is arbitrary now, no? Why not take into account the size of the button and change the patch to 530 - size of button? No need to stick to one arbitrary size, if this is what we've come to.
Comment 5 Yosef Or Boczko 2013-11-08 13:16:30 UTC
Created attachment 259270 [details] [review]
ephy-location-entry: Set default size and allow to reduced the entry

I checked the size of the button:
int width;
gtk_widget_get_preferred_width (reload, NULL, &width);
g_print ("\n%d: ", width);

and it printed "32".

So I changed the natural width to (530 - 32) = 518.
Comment 6 Claudio Saavedra 2013-11-08 13:45:22 UTC
Review of attachment 259270 [details] [review]:

Please commit to the stable branch as well.
Comment 7 Yosef Or Boczko 2013-11-09 19:49:21 UTC
Review of attachment 259270 [details] [review]:

pushed as 46b8f9f5a61fbd7cd1f78d4b3987b3dc0d267cc8 - ephy-location-entry: Set default size and allow to reduced the entry
Comment 8 Claudio Saavedra 2013-11-14 11:35:07 UTC
*** Bug 712285 has been marked as a duplicate of this bug. ***