ephy-location-entry: Set default size and allow to reduced the entry

https://bugzilla.gnome.org/show_bug.cgi?id=708994